tests/testcases/errors/BCE0167-1.boo
"""
BCE0167-1.boo(5,8): BCE0167: Namespace 'Bad.Namespace' not found in assembly 'Boo.Lang'
"""

import Bad.Namespace from Boo.Lang

print "ok"

